# Test

./: .gitignore  CMakeLists.txt  README.md
include/: AppInit.h  Factory.h  IBinaryTree.h  Item.h  Nevyvazeny.h  Vyvazeny.h
src/: AppInit.cpp  Factory.cpp  IBinaryTree.cpp  Item.cpp  Nevyvazeny.cpp  Vyvazeny.cpp  main.cpp
tests/: CMakeLists.txt  ExampleTest.cpp
